// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Atom|TodoText default 1`] = `
.c0 {
  padding: 16px 16px 16px 60px;
  border: 0;
  background: rgba(0,0,0,0.003);
  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
}

<input
  className="c0"
  onChange={[Function]}
  onKeyDown={[Function]}
  type="text"
  value=""
/>
`;

exports[`FileProperties Atom|TodoText props text 1`] = `
.c0 {
  padding: 16px 16px 16px 60px;
  border: 0;
  background: rgba(0,0,0,0.003);
  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
}

<input
  className="c0"
  onChange={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="hoge"
/>
`;

exports[`FileProperties Atom|TodoText props text and handleEnter 1`] = `
.c0 {
  padding: 16px 16px 16px 60px;
  border: 0;
  background: rgba(0,0,0,0.003);
  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
}

<input
  className="c0"
  onChange={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="hoge"
/>
`;
